parkrun-stats - Create a main method for CourseEventChecker